Fix title to include Paul's name.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img src="static/types.png" class="hidden">
     </div>
     <header>
-        <h1>'s Pokémon Trading Sheet</h1>
+        <h1>Paul's Pokémon Trading Sheet</h1>
         <div id="trainer-info">
         </div>
         <nav>
